Fixed double scrollbar

--- a/app/src/app.scss
+++ b/app/src/app.scss
@@ -1,3 +1,7 @@
+html {
+  overflow-y: hidden;
+}
+
 @media
 only screen and (-webkit-min-device-pixel-ratio: 1.5),
 only screen and (-o-min-device-pixel-ratio: 3/2),
